--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,19 +8,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity" android:theme="@style/Theme.AppCompat.Dark" android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service android:enabled="true"  android:name=".services.OverlayService">
+        <service android:enabled="true"  android:name=".services.OverlayService"> <!-- Overlay service here -->
             <intent-filter>
                 <action android:name="android.intent.action.CONFIGURATION_CHANGED"/> <!-- Restart the overlay when the display is rotated -->
             </intent-filter>
-        </service> <!-- Overlay service here -->
+        </service>
 
         <receiver android:name=".receiver.TileReceiver"> <!-- Tile listener here -->
             <intent-filter>
@@ -28,7 +27,7 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".activity.AboutActivity" /> <!-- About activity -->
+        <activity android:name=".activity.AboutActivity" android:theme="@style/Theme.AppCompat.Dialog" /> <!-- About activity -->
     </application>
 
 </manifest>
